--- a/package.json
+++ b/package.json
@@ -14,15 +14,18 @@
     "postinstall": "npx patch-package"
   },
   "dependencies": {
+    "@react-native-community/netinfo": "^11.3.2",
     "@react-native-masked-view/masked-view": "^0.3.1",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
     "@tanstack/react-query": "^5.31.0",
+    "axios": "^1.7.2",
     "i18next": "^23.11.2",
     "ky": "^1.2.4",
     "react": "18.2.0",
     "react-i18next": "^14.1.0",
     "react-native": "0.74.1",
+    "react-native-config": "^1.5.2",
     "react-native-gesture-handler": "^2.16.0",
     "react-native-mmkv": "^2.12.2",
     "react-native-reanimated": "^3.9.0-rc.1",
