--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "clean-ios": "rm -rf ios/build && rm -rf ios/Pods && pod cache clean --all && rm -rf ~/.cocoapods"
   },
   "dependencies": {
-    "@hookform/resolvers": "^3.9.0",
+    "@hookform/resolvers": "3.0.0",
     "@react-native-community/async-storage": "^1.12.1",
     "@react-native-community/netinfo": "^11.3.2",
     "@react-native-masked-view/masked-view": "^0.3.1",
@@ -59,7 +59,7 @@
     "lodash": "^4.17.21",
     "react": "18.2.0",
     "react-fast-compare": "^3.2.2",
-    "react-hook-form": "^7.52.1",
+    "react-hook-form": "7.43.7",
     "react-i18next": "^14.1.0",
     "react-native": "0.74.1",
     "react-native-config": "^1.5.2",
