--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -108,6 +108,9 @@ dependencies {
     // The version of react-native is set by the React Native Gradle Plugin
     implementation("com.facebook.react:react-android")
     implementation project(':react-native-config')
+    implementation 'com.facebook.android:facebook-android-sdk:[8,9)'
+    implementation project(':react-native-fbsdk-next')
+
 
 
     if (hermesEnabled.toBoolean()) {
