--- a/package.json
+++ b/package.json
@@ -52,11 +52,14 @@
     "@reduxjs/toolkit": "^2.2.6",
     "@tanstack/react-query": "^5.31.0",
     "@types/lodash": "^4.17.6",
+    "@types/ramda": "^0.30.1",
+    "@types/seamless-immutable": "^7.1.19",
     "axios": "^1.7.2",
     "i18next": "^23.11.2",
     "jwt-decode": "^4.0.0",
     "ky": "^1.2.4",
     "lodash": "^4.17.21",
+    "ramda": "^0.30.1",
     "react": "18.2.0",
     "react-fast-compare": "^3.2.2",
     "react-hook-form": "7.43.7",
@@ -76,8 +79,10 @@
     "react-native-svg": "^15.3.0",
     "react-redux": "^9.1.2",
     "reactotron-redux": "^3.1.9",
+    "reactotron-redux-saga": "^4.2.3",
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.3.0",
+    "seamless-immutable": "^7.1.4",
     "yup": "^1.4.0",
     "zod": "^3.23.0"
   },
@@ -94,6 +99,7 @@
     "@types/jest": "^29.4.0",
     "@types/node": "^18.14.1",
     "@types/react": "^18.2.6",
+    "@types/react-navigation": "^3.0.8",
     "@types/react-test-renderer": "^18.0.0",
     "@typescript-eslint/parser": "^6.13.1",
     "babel-jest": "^29.6.3",
