--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "jwt-decode": "^4.0.0",
     "ky": "^1.2.4",
     "lodash": "^4.17.21",
+    "patch-package": "^8.0.0",
     "ramda": "^0.30.1",
     "react": "18.2.0",
     "react-fast-compare": "^3.2.2",
